[workspace]
members = [
    "programs/nft_minter",
    "programs/nft_swapper"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
